syntax = "proto3";

package authservice;

option go_package = "proto;authservice";

service Authservice {
	rpc Call(Request) returns (Response) {}
	rpc GetNewToken(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
	string username = 2;
	string expiretime =3;
}

message Response {
	string msg = 1;
	string pubkey = 2;
	string token = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
